style.css
/* ... */
.header-right_aligned {
    display: flex;
    flex-direction: row;
    gap: 12px;
}


.search-wrapper {
    display: flex;
    width: 100%;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    gap: 12px;
}

.top-nav_search-field-active {
    display: flex;
    width: 448px;
    height: 32px;
    padding: 5px 12px;
    justify-content: space-between;
    align-items: center;
    border-radius: 4px;
    background: var(--color-cornflower-200, #E4E5E7);
    border: transparent;
    cursor: pointer;
}

.icon-wrapper {
    display: flex;
    padding: 8px;
    align-items: center;
    gap: 48px;
    border-radius: 4px;
    background: var(--color-cornflower-400, #A3A7B0);
}

/* header - initial search */

.top-nav_search-field {
    display: flex;
    width: 200px;
    height: 32px;
    padding: 5px 12px;
    justify-content: space-between;
    align-items: center;
    border-radius: 4px;
    background: var(--color-lavenderhaze-200, #F3F5FB);
    border: transparent;
    cursor: pointer;
}

.sm-nav_block {
    display: flex;
    width: var(--button-icon_only-width, 32px);
    height: var(--button-height, 32px);
    justify-content: center;
    align-items: center;
    border-radius: var(--button-border_radius, 4px);
    background: var(--color-cornflower-200, #E4E5E7);
}

.lg-nav_block {
    display: flex;
    width: 164px;
    height: var(--button-height, 32px);
    justify-content: center;
    align-items: center;
    border-radius: var(--button-border_radius, 4px);
    background: var(--color-cornflower-200, #E4E5E7);
}


.top-nav_search-left_aligned {
    display: flex;
    align-items: center;
    gap: 16px;
}

/* Side Sheet [Default] */

.floating-side-sheet {
    position: absolute;
    margin-top: 56px;
    margin-bottom: 40px;
    top: 0;
    bottom: 0; 
    right: 258px;
    display: flex;
    width: 472px;
    padding: 16px 0px;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    flex: 1 0 0;
    border-radius: 8px;
    border: 1px solid var(--color-cornflower-200, #E4E5E7);
    background: #FFF;
    /* ❌[DEPRECATED]/large 30 */
    box-shadow: 0px 6px 8px 1px rgba(35, 57, 93, 0.15);
}

.search-container {
    display: flex;
    width: 100%;
    flex-direction: column;
    padding: 0px 16px;
    box-sizing: border-box;
}

.search-container_lower-row {
    display: flex;
    width: 100%;
    align-items: center;
    gap: 8px;
    box-sizing: content-box;
}

.container-divider {
    width: 100%;
    height: 1px;
    background: var(--color-cornflower-200, #E4E5E7);
}

.dynamic-content_block {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: scroll; 
    flex-direction: column;
    gap: 24px;
    margin-top: 4px;
}

.dynamic-content_block-customize {
    display: flex;
    width: 100%;
    height: 100%;
    overflow: scroll; 
    flex-direction: column;
    gap: 16px;
}

.content-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    align-self: stretch;
    box-sizing: border-box;
}

.content-subtitle_text {
    color: var(--color-cornflower-800, #23395D);
    width: auto;
    font-family: Urbanist;
    font-size: 18px;
    font-style: normal;
    font-weight: 600;
    line-height: 27px; /* 150% */
    letter-spacing: 0.36px;
    align-items: center;
    gap: 8px;
    white-space: nowrap;
}

.recent-subtitle_text {
    color: var(--color-cornflower-800, #23395D);
    width: 100%;
    font-family: Urbanist;
    font-size: 18px;
    font-style: normal;
    font-weight: 600;
    line-height: 27px; /* 150% */
    letter-spacing: 0.36px;
    align-items: center;
    gap: 8px;
    width: auto;
}

/* Side Sheet [Partial Input] */

.content-section {
    display: flex;
    height: auto;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow: scroll;
    box-sizing: border-box;
}

.customize_content-section {
    display: flex;
    margin-top: 8px;
    padding: 12px 8px 20px 8px;
    justify-content: center;
    align-items: flex-start;
    align-self: stretch;
    border-radius: 8px;
    border: 1px solid var(--color-blueberry-200, #CED2FC);
    background: var(--color-blueberry-50, #EFF0FE);
    box-shadow: 0px 2px 4px 1px rgba(35, 57, 92, 0.10);
}

.content-subtitle {
    display: flex;
    align-items: flex-start;
    gap: 8px;
    align-self: stretch;
}

.kebab-icon {
    cursor: pointer;
}

.kebab-container {
    position: relative;
    height: auto;
    width: auto;
}

.kebab-option_menu {
    position: absolute;
    right: 16px;
    top: 24px;
    display: flex;
    width: 160px;
    padding: 16px 12px;
    flex-direction: column;
    align-items: flex-start;
    border-radius: var(--menu-border_radius, 4px);
    border: 1px solid var(--color-cornflower-300, #C6C8CE);
    background: var(--menu-background_color, #FFF);
    box-shadow: 0px 2px 4px 1px rgba(35, 57, 92, 0.10);
}

.kebab-option_menu:hover {
    background: var(--menu-option-hover-background_color, #EFF0FE);
    cursor: pointer;
}

.kebab-option_text {
    display: flex;
    height: 16px;
    flex-direction: column;
    justify-content: center;
    align-self: stretch;
    overflow: hidden;
    color: var(--menu-option-label-foreground_color, #1B2C48);
    text-overflow: ellipsis;
    white-space: nowrap;
    font-family: "Noto Sans";
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: 16px; /* 133.333% */
}

/* Search Field - Side Sheet */

.input-highlight {
    background: rgba(163, 167, 176, 0.32);
}

.search-field {
    display: flex;
    width: 448px;
    padding: 5px 12px;
    align-items: center;
    gap: 8px;
    border-radius: 4px;
    background: var(--color-lavenderhaze-200, #F3F5FB);
    justify-content: space-between;
}

.search-left_aligned {
    display: flex;
    flex: 1;
    align-items: center;
    gap: 8px;
}
/* ... */

